--- a/QLSV/app/src/main/res/layout/fragment_homepage.xml
+++ b/QLSV/app/src/main/res/layout/fragment_homepage.xml
@@ -160,7 +160,23 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
 
-                            android:text="Appointment"
+                            android:text="Schedule"
+
+                            android:textColor="#C7C2EB"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView12"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="152dp"
+                            android:layout_marginTop="16dp"
+
+                            android:text="Học kỹ năng phần mêm"
 
                             android:textColor="#C7C2EB"
                             android:textSize="16sp"
