--- a/QLSV/app/src/main/res/layout/fragment_user_info.xml
+++ b/QLSV/app/src/main/res/layout/fragment_user_info.xml
@@ -45,42 +45,54 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 >
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:orientation="vertical"
-                    >
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:id="@+id/bindAvatar"
-                        android:layout_width="115dp"
-                        android:layout_height="115dp"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/ic_profile_avt"
-                        android:layout_marginTop="15dp"
-                        app:shapeAppearanceOverlay="@style/Circular"
-                        />
-                    <LinearLayout
-                        android:id="@+id/changeAvatarBtn"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/avatar"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_marginTop="32dp"
+                        android:src="@drawable/ic_avatar_placeholder"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:minHeight="48dp"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center_vertical"
-                        android:orientation="vertical"
-                        android:clickable="true"
-                        android:focusable="true">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Change Avatar"
-                            android:textSize="14sp"
-                            />
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="2dp"
-                            android:background="@color/dark_gray" />
-                    </LinearLayout>
+                        android:layout_marginTop="16dp"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/avatar" />
+
+                    <TextView
+                        android:id="@+id/email"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="16sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/name" />
+
+                    <TextView
+                        android:id="@+id/username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="16sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/email" />
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
