--- a/QLSV/app/src/main/res/menu/bottom_menu.xml
+++ b/QLSV/app/src/main/res/menu/bottom_menu.xml
@@ -24,7 +24,7 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/fragment_profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
 </menu>
